--- a/Java-Avanzado/Leccion03/tienda_libros/pom.xml
+++ b/Java-Avanzado/Leccion03/tienda_libros/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>tienda_libros</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>tienda_libros</name>
-	<description>Sistema Tienda de Libros</description>
+	<description>Sistema de tienda de libros</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>23</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
