--- a/Java-Avanzado/Leccion03/tienda_libros/src/main/resources/application.properties
+++ b/Java-Avanzado/Leccion03/tienda_libros/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Conexión a la base de datos MySql
 spring.datasource.url=jdbc:mysql://localhost:3306/tienda_libros_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=laujaz1706
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Crear la base de datos en caso de ser necesario
