--- a/Java-Avanzado/Leccion03/tienda_libros/src/main/resources/application.properties
+++ b/Java-Avanzado/Leccion03/tienda_libros/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Crear la base de datos en caso de ser necesario
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
